--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=https://npm.pkg.github.com/@MaxwellBoecker
-# registry=https://registry.npmjs.org
+@MaxwellBoecker:registry=https://npm.pkg.github.com/
+registry=https://registry.npmjs.org
