--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-@MaxwellBoecker:registry=https://npm.pkg.github.com/
-registry=https://registry.npmjs.org
+registry=https://npm.pkg.github.com/@MaxwellBoecker
+# registry=https://registry.npmjs.org
 //npm.pkg.github.com/:_authToken=${BUFFET_REBUILD_TOKEN}
