--- a/package.json
+++ b/package.json
@@ -103,10 +103,10 @@
   "author": "Strapi Team",
   "license": "MIT",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/MaxwellBoecker"
+    "registry": "https://npm.pkg.github.com/"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MaxwellBoecker/ezoic-buffetjs"
+    "url": "git@github.com:MaxwellBoecker/ezoic-buffetjs.git"
   }
 }
